# pharmachat

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  setup_repo.sh
pharmachat/: __init__.py  __main__.py
pharmachat/api/: __init__.py  api.py
pharmachat/cli/: __init__.py  ask_ollama.py
pharmachat/config/: config.yaml
pharmachat/core/: __init__.py  set_env.py
pharmachat/core/config/: __init__.py
pharmachat/data/: __init__.py  leaflet_scrapping.py
pharmachat/ml/: __init__.py  ollama_interface.py
